samples/_failures_safe/1761212345_8643d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf141585.c: In function ‘main’:
./samples/SAFE/__tmp_bf141585.c:156:17: error: expected expression at end of input
  156 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_bf141585.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf141585.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf141585.c:156:17: error: expected declaration or statement at end of input
